--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Software Professional with 7 + years of experience in DevOps Environment &Cloud AWS (Amazon Web Services)</p>
+          <p>Software Professional with 8+ years of experience in DevOps Environment &Cloud AWS (Amazon Web Services)</p>
         </div>
 
         <div class="row">
@@ -94,7 +94,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Devops Engineer.</h3>
             <p class="fst-italic">
-              Software Professional with 7 + years of experience in DevOps Environment &Cloud AWS (Amazon Web Services) and DevOps Engineer seeking roles in Git, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible , AWS EC2, AWS S3, Route53, VPC, Lambda, CloudFormation, Shell Scripting, Python, Newrelic.
+              Software Professional with 8+ years of experience in DevOps Environment &Cloud AWS (Amazon Web Services) and DevOps Engineer seeking roles in Git, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible , AWS EC2, AWS S3, Route53, VPC, Lambda, CloudFormation, Shell Scripting, Python, Newrelic.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -126,7 +126,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Software Professional with 7 + years of experience in DevOps Environment &Cloud AWS (Amazon Web Services) and DevOps Engineer seeking roles in Git, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible , AWS EC2, AWS S3, Route53, VPC, Lambda, CloudFormation, Shell Scripting, Python, Newrelic.</p>
+          <p>Software Professional with 8+ years of experience in DevOps Environment &Cloud AWS (Amazon Web Services) and DevOps Engineer seeking roles in Git, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible , AWS EC2, AWS S3, Route53, VPC, Lambda, CloudFormation, Shell Scripting, Python, Newrelic.</p>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
@@ -232,37 +232,32 @@
             </div>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Computer Applications</h4>
-              <h5>2009 - 2012</h5>
-              <p><em>Sri Venkateswar University,Tirupathi, AP</em></p>
+              <h4>Bachelor of Technology</h4>
+              <h5>2010 - 2014</h5>
+              <p><em>JNTUA</em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Science</h4>
-              <h5>2005 - 2009</h5>
-              <p><em>Sri Venkateswar University,Tirupathi, AP</em></p>
+              <h4>Master of Technology</h4>
+              <h5>2015 - 2016</h5>
+              <p><em>JNTUA</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="resume-item">
               <h3 class="resume-title">Professional Experience</h3>
               <h4>Senior Devops Engineer</h4>
-              <h5>May-2024 to Present</h5>
-              <p><em>Globallogic, Bangalore, IN </em></p>
+              <h5>May-2022 to Present</h5>
+              <p><em>TCS, Bangalore, IN </em></p>
             </div>
             <div class="resume-item">
               <h4>Sr Devops Engineer</h4>
-              <h5>June-2023 to Dec-2023</h5>
-              <p><em>DXC Technology, Bangalore, IN</em></p>
+              <h5>Nove-2020 to May-2022</h5>
+              <p><em>iNFOSYS, Bangalore, IN</em></p>
             </div>
             <div class="resume-item">
               <h4>Sr Infra Developer</h4>
-              <h5>Nove-2020 to March-2023</h5>
+              <h5>May-2018 to Nove-2020</h5>
               <p><em>Cognizant ,Bangalore, IN</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>Support Engineer</h4>
-              <h5>Feb-2017 to Nove-2019</h5>
-              <p><em>Apollo Medical Collget, Chittoor, IN</em></p>
             </div>
           </div>
         </div>
@@ -277,7 +272,7 @@
 
         <div class="section-title">
           <h2>Devops Tools</h2>
-          <p>DevOps Engineer seeking roles in Git, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible , AWS EC2, AWS S3, Route53, VPC, Lambda, CloudFormation, Shell Scripting, Python, Newrelic..</p>
+          <p>DevOps Engineer seeking roles in Git, Github-Actions, Team-city, UCD, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible, Ansible-Tower , AWS, GCP, Shell Scripting, Power Shell script, Grafana, Python,..</p>
         </div>
 
         <div class="row">
@@ -323,7 +318,7 @@
         <div class="section-title">
           <h2>Contact</h2>
           <p>
-            I am a DevOps Engineer with over 7 years of experience in automating, deploying, and managing cloud-based infrastructure. My expertise spans across AWS Cloud, CI/CD pipelines, containerization, and infrastructure as code. I have hands-on experience with tools like Git, Maven, Jenkins, SonarQube, Nexus, Docker, Kubernetes, Ansible, and Terraform. In AWS, I work extensively with EC2, S3, VPC, Route 53, Lambda, and CloudFormation. I also write automation scripts using Shell and Python, and I monitor applications using New Relic and other observability tools.
+            I am a DevOps Engineer with over 8  years of experience in automating, deploying, and managing cloud-based infrastructure. My expertise spans across AWS Cloud, CI/CD pipelines, containerization, and infrastructure as code. I have hands-on experience with tools like Git, Maven, Jenkins, SonarQube, Nexus, Docker, Kubernetes, Ansible, and Terraform. In AWS, I work extensively with EC2, S3, VPC, Route 53, Lambda, and CloudFormation. I also write automation scripts using Shell and Python, and I monitor applications using New Relic and other observability tools.
           </p>          
         </div>
 
@@ -404,7 +399,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Lavakumar</span></strong>
+        &copy; Copyright <strong><span>Sandeep</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
