--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Sandeep N</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/lavakumarolipi@gamil.com" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
-          <a href="https://facebook.com/lavakumarolipi@gamil.com" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-          <a href="https://instagram.com/lavakumarolipi@gamil.com" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
-          <a href="https://plus.google.com/kumarolipi88@gamil.com" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>
+          <a href="https://twitter.com/sandeepdrld@gamil.com" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+          <a href="https://facebook.com/sandeepdrld@gamil.com" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+          <a href="https://instagram.com/sandeepdrld@gamil.com" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+          <a href="https://plus.google.com/sandeepdrld@gamil.com" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>
           <a href="https://www.linkedin.com/in/sandeepdrld@gmail.com" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Software Professional with 8+ years of experience in DevOps Environment &Cloud AWS (Amazon Web Services)</p>
+          <p>Software Professional with 8+ years of experience in DevOps Environment & Cloud AWS (Amazon Web Services) and GCP</p>
         </div>
 
         <div class="row">
@@ -94,7 +94,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Devops Engineer.</h3>
             <p class="fst-italic">
-              Software Professional with 8+ years of experience in DevOps Environment &Cloud AWS (Amazon Web Services) and DevOps Engineer seeking roles in Git, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible , AWS EC2, AWS S3, Route53, VPC, Lambda, CloudFormation, Shell Scripting, Python, Newrelic.
+              Software Professional with 8+ years of experience in DevOps Environment & Cloud AWS, GCP and DevOps Engineer seeking roles in Git, Github-Actions, Team-city, UCD, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible, Ansible-Tower, Shell Scripting, Power Shell script, Grafana, Python, Generative AI tools.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -107,7 +107,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>36</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>32</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sandeepdrld@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>India</span></li>
@@ -126,7 +126,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Software Professional with 8+ years of experience in DevOps Environment &Cloud AWS (Amazon Web Services) and DevOps Engineer seeking roles in Git, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible , AWS EC2, AWS S3, Route53, VPC, Lambda, CloudFormation, Shell Scripting, Python, Newrelic.</p>
+          <p>Software Professional with 8+ years of experience in DevOps Environment & Cloud AWS, GCP and DevOps Engineer seeking roles in Git, Github-Actions, Team-city, UCD, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible, Ansible-Tower, Shell Scripting, Power Shell script, Grafana, Python, Generative AI tools.</p>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
@@ -166,12 +166,12 @@
       <div class="container">
         <div class="section-title">
           <h2>Skills</h2>
-          <p>DevOps Engineer seeking roles in Git, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible , AWS EC2, AWS S3, Route53, VPC, Lambda, CloudFormation, Shell Scripting, Python, Newrelic</p>
+          <p>DevOps Engineer seeking roles in Git, Github-Actions, Team-city, UCD, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible, Ansible-Tower , AWS, GCP, Shell Scripting, Power Shell script, Grafana, Python, Generative AI tools</p>
         </div>
         <div class="row skills-content">
           <div class="col-lg-6" data-aos="fade-up">
             <div class="progress">
-              <span class="skill">Jenkins & AZURE pipelines <i class="val">70%</i></span>
+              <span class="skill">Jenkins & Github-Actions <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -203,7 +203,7 @@
               </div>
             </div>
             <div class="progress">
-              <span class="skill"> NewRelic <i class="val">55%</i></span>
+              <span class="skill"> GCP <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -217,7 +217,7 @@
       <div class="container">
         <div class="section-title">
           <h2>Resume</h2>
-          <p>DevOps Engineer seeking roles in Git, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible , AWS EC2, AWS S3, Route53, VPC, Lambda, CloudFormation, Shell Scripting, Python, Newrelic.</p>
+          <p>DevOps Engineer seeking roles in Git, Github-Actions, Team-city, UCD, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible, Ansible-Tower , AWS, GCP, Shell Scripting, Power Shell script, Grafana, Python, Generative AI tools.</p>
         </div>
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
@@ -272,7 +272,7 @@
 
         <div class="section-title">
           <h2>Devops Tools</h2>
-          <p>DevOps Engineer seeking roles in Git, Github-Actions, Team-city, UCD, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible, Ansible-Tower , AWS, GCP, Shell Scripting, Power Shell script, Grafana, Python,..</p>
+          <p>DevOps Engineer seeking roles in Git, Github-Actions, Team-city, UCD, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible, Ansible-Tower , AWS, GCP, Shell Scripting, Power Shell script, Grafana, Python, Generative AI tools..</p>
         </div>
 
         <div class="row">
@@ -296,11 +296,6 @@
             <h4 class="title"><a href="">Kubernetes</a></h4>
             <p class="description">Kubernetes is open-source software that allows you to deploy and manage containerized applications at scale.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">New Relic</a></h4>
-            <p class="description">New Relic is a powerful observability platform that helps developers, DevOps, and IT teams monitor, troubleshoot, and optimize application performance in real-time. It provides deep insights into the health of applications, infrastructure, logs, and user behavior — all in one place.</p>
-          </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
             <h4 class="title"><a href="">AWS Services</a></h4>
@@ -318,7 +313,7 @@
         <div class="section-title">
           <h2>Contact</h2>
           <p>
-            I am a DevOps Engineer with over 8  years of experience in automating, deploying, and managing cloud-based infrastructure. My expertise spans across AWS Cloud, CI/CD pipelines, containerization, and infrastructure as code. I have hands-on experience with tools like Git, Maven, Jenkins, SonarQube, Nexus, Docker, Kubernetes, Ansible, and Terraform. In AWS, I work extensively with EC2, S3, VPC, Route 53, Lambda, and CloudFormation. I also write automation scripts using Shell and Python, and I monitor applications using New Relic and other observability tools.
+            I am a DevOps Engineer with over 8  years of experience in automating, deploying, and managing cloud-based infrastructure. My expertise spans across CI/CD pipelines, containerization, and infrastructure as code. I have hands-on experience with tools like Software Professional with 8+ years of experience in DevOps Environment & Cloud AWS, GCP and DevOps Engineer seeking roles in Git, Github-Actions, Team-city, UCD, Maven, Jenkins, Sonarqube, Nexus, Docker, Kubernetes, Ansible, Ansible-Tower, Shell Scripting, Power Shell script, Grafana, Python, Generative AI tools..
           </p>          
         </div>
 
