--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               </div>
             </div>
             <div class="progress">
-              <span class="skill"> GCP <i class="val">55%</i></span>
+              <span class="skill"> GCP <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -225,7 +225,6 @@
             <div class="resume-item pb-0">
               <h4>Sandeep N</h4>
               <ul>
-                <li>Bangalore</li>
                 <li>8985321048</li>
                 <li>Sandeepdrld@gmail.com</li>
               </ul>
@@ -252,7 +251,7 @@
             <div class="resume-item">
               <h4>Sr Devops Engineer</h4>
               <h5>Nove-2020 to May-2022</h5>
-              <p><em>iNFOSYS, Bangalore, IN</em></p>
+              <p><em>INFOSYS, Bangalore, IN</em></p>
             </div>
             <div class="resume-item">
               <h4>Sr Infra Developer</h4>
